Wed Apr  7 10:43:17 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* Makefile.in, common.mk, */Makefile.sub (ext/extinit.o): OUTFLAG
	  doesn't work for object files on VC.

	* */Makefile.sub (config.h): need SIZEOF_TIME_T now.

Wed Apr  7 00:24:34 2004  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* lib/rinda/rinda.rb: fix hash tuple bug.

	* lib/rinda/tuplespace.rb: ditto.

	* test/rinda/test_rinda.rb

Tue Apr  6 18:24:18 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* file.c (rb_get_path): get path string via "to_path" method if
	  path object is not a string. [Ruby2]

	* gc.c (rb_gc_call_finalizer_at_exit): do not free threads in the
	  exit finalizers.

	* io.c (rb_io_reopen): should use rb_io_check_io().

Tue Apr  6 16:46:09 2004  Tanaka Akira  <akr@m17n.org>

	* configure.in: check the size of time_t.

	* time.c (time_add): new function.
	  (time_plus): use time_add.
	  (time_minus): use time_add.

Tue Apr  6 13:11:48 2004  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/socket/socket.c (raise_socket_error): never return.

	* ext/socket/socket.c (make_hostent): must return value.

Tue Apr  6 00:14:43 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* error.c (Init_Exception): remove Exception#to_str. [Ruby2]

	* eval.c (error_print): should no call "to_str" anymore use
	  "message" method instead.

	* io.c (rb_f_open): Kernel#open() calls "to_open" if the first
	  argument responds to it. [Ruby2]

Tue Apr  6 00:13:43 2004  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* lib/rinda/rinda.rb: add require 'drb/drb'

Mon Apr  5 22:25:32 2004  Tanaka Akira  <akr@m17n.org>

	* test/zlib/test_zlib.rb: new file.
	  (TestZlibGzipWriter#test_new_nil): test for [ruby-dev:23228].

Mon Apr  5 22:16:23 2004  Minero Aoki  <aamine@loveruby.net>

	* parse.y (assoc_list): {a: 1, b: 2} should be allowed.
	  [ruby-dev:23328]

Mon Apr  5 19:43:40 2004  Kazuo Saito  <ksaito@uranus.dti.ne.jp>

	* regexec.c: imported Oni Guruma 2.2.6.
