@@ -1,3 +1,13 @@
+Wed Apr  7 12:32:02 2004  Kouhei Sutou  <kou@cozmixng.org>
+
+	* lib/rss/parser.rb, lib/rss/1.0.rb: accepted rdf:resource or
+	  resource attribute in rdf:li.
+	* test/rss/test_parser.rb: added test for above change.
+
+	* lib/rss/dublincore.rb: reverted style.
+
+	* lib/rss/xmlparser.rb: normalized XMLParser class hierarchy.
+	
 Wed Apr  7 10:43:17 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* Makefile.in, common.mk, */Makefile.sub (ext/extinit.o): OUTFLAG
